resources/gitops-config/operators/argo-cd/templates/argocd-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argocd-httproute
spec:
  parentRefs:
  - name: cilium-gateway
    namespace: kube-system
    sectionName: https-listener
  hostnames:
    - argocd.local.damman.tech
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argo-cd-argocd-server
          port: 443
